--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "npx wrangler@3 pages dev",
-    "build": "npx wrangler@3 pages build",
-    "deploy": "npx wrangler@3 pages deploy"
+    "dev": "npx --yes wrangler@3 pages dev",
+    "build": "npx --yes wrangler@3 pages build",
+    "deploy": "npx --yes wrangler@3 pages deploy"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -17,4 +17,3 @@
     "@types/react-dom": "^17.0.2"
   }
 }
-
